--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -137,6 +137,11 @@ fieldset {
     text-transform: uppercase;
 }
 
+.home .nav .logo img {
+    width: 70px;
+    height: 70px;
+}
+
 .home .nav .download-loader {
     border: 1px solid #ff0000;
     border-radius: 10px;
@@ -146,6 +151,14 @@ fieldset {
     font-size: 16px;
     transition: 200ms;
     margin-left: 10px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+}
+
+.home .nav .download-loader .text-content {
+    display: flex;
+    align-items: center;
 }
 
 .home .nav .download-loader:hover {
@@ -154,7 +167,7 @@ fieldset {
 }
 
 .home .nav .download-loader:hover .text-content {
-    border-left-color: #fff; 
+    border-left-color: #fff;
 }
 
 .home .nav .download-loader img {
@@ -169,9 +182,8 @@ fieldset {
 }
 
 .home .nav .gray-line {
-    height: 2px;
-    width: 4%;
-    transform: rotate(90deg);
+    height: 50px;
+    width: 1px;
     background-color: #3c2e33;
 }
 
@@ -724,7 +736,7 @@ fieldset {
     bottom: 0;
     left: 0;
     margin: auto;
-    opacity: 1;
+    z-index: 1;
 }
 
 .home .steps .instruction-num {
@@ -1843,6 +1855,7 @@ fieldset {
     background-color: #1C1C24;
     min-height: auto;
     position: static;
+    opacity: 1jjkjjjjkjkjkjjkjjj;
 }
 
 .dashboard .main .product-info .product .general-info {
@@ -2775,7 +2788,7 @@ fieldset {
 
 .dashboard .main .FAQ .answers-wrap {
     margin-top: 70px;
-    transition: 1s;
+    transition: 650ms;
 }
 
 .dashboard .main .FAQ .answer-title {
@@ -3692,6 +3705,12 @@ fieldset {
     font-size: 14px;
 }
 
+.footer .container .container .container {
+    padding: 0;
+    width: 100%;
+    margin: 0;
+}
+
 .footer .footer-wrap {
     display: flex;
     justify-content: space-between;
@@ -3737,28 +3756,24 @@ fieldset {
 }
 
 .footer .contacts .soc-media a:hover {
-    filter: invert(1);
-    background-color: #000;
-    border: 1px solid #fff;
+    background-color: #fff;
+    border: 1px solid #000;
 }
 
 .footer .gray-line {
-    height: 60%;
+    height: 50px;
     width: 1px;
     background-color: #292932;
-    margin-left: 30px;
 }
 
 .footer .download-loader {
     border: 1px solid #1E75FF;
-    padding: 10px 20px;
     cursor: pointer;
     background: transparent;
     color: #fff;
     border-radius: 10px;
     transition: 200ms;
     margin-left: 30px;
-    width: 206px;
 }
 
 .footer .download-loader:hover {
@@ -3843,18 +3858,27 @@ fieldset {
 .admin-panel .search-bar {
     display: flex;
     align-items: center;
+    transition: 300ms;
+}
+
+.admin-panel .search-bar .search-field {
+    width: 315px;
+    padding-left: 35px;
+    background-color: #F8F8F8;
+    border-radius: 8px;
+    padding: 15px;
+    display: flex;
+    align-items: center;
 }
 
 .admin-panel .search-bar .search-field input {
     width: 315px;
     color: #aaa;
-    background-color: #F8F8F8;
-    border-radius: 8px;
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
     border: none;
-    padding: 10px 15px;
+    margin-left: 15px;
 }
 
 .admin-panel .search-bar .checkbox {
@@ -3995,7 +4019,7 @@ fieldset {
 
 .admin-panel .users .confirm {
     position: absolute;
-    top: -60%;
+    top: -65%;
     left: 0;
     right: 0;
     margin: 0 auto;
@@ -4212,6 +4236,31 @@ fieldset {
 
 .admin-panel .users .users-list .all-users .user .actions .button.delete:hover {
     background-color: #92191978;
+}
+
+.admin-panel .users .users-list .all-users .pages {
+    display: flex;
+    padding: 10px;
+}
+
+.admin-panel .users .users-list .all-users .pages .page-link {
+    font-weight: 500;
+    font-size: 18px;
+    letter-spacing: .1px;
+    line-height: 36px;
+    color: #fff;
+    width: 30px;
+    height: 30px;
+    background-color: #900000;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+}
+
+.admin-panel .users .users-list .all-users .pages .page-link + .page-link {
+    margin-left: 7px;
 }
 
 .admin-panel .edit-user {
