little transitions are added and setting a new avatar is corrected

--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -1961,6 +1961,7 @@ fieldset {
     justify-content: center;
     cursor: pointer;
     user-select: none;
+    transition: 300ms;
 }
 
 .user-menu .avatar .first-char {
@@ -1969,6 +1970,7 @@ fieldset {
 
 .user-menu .username {
     margin-left: 10px;
+    transition: 300ms;
 }
 
 .user-menu .menu-arrow {
@@ -2188,6 +2190,10 @@ fieldset {
     opacity: 0;
 }
 
+.dashboard .main .lobby .welcome .user-avatar-wrap {
+    transition: 300ms;
+}
+
 .dashboard .main .lobby a {
     color: #fff;
     text-decoration: none;
@@ -2236,10 +2242,13 @@ fieldset {
     position: relative;
     min-width: 56px;
     height: 56px;
+    transition: 300ms;
 }
 
 .dashboard .main .lobby .info .user .general .avatar .first-char {
     position: absolute;
+    user-select: none;
+    pointer-events: none;
 }
 
 .dashboard .main .lobby .info .user .general .data {
