--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4329,7 +4329,7 @@ fieldset {
     left: 0;
     right: 0;
     margin: 0 auto;
-    transition: 200ms;
+    transition: 450ms;
     z-index: 2;
     display: flex;
     flex-direction: column;
@@ -4339,6 +4339,13 @@ fieldset {
     line-height: 36px;
     letter-spacing: .1px;
     color: #fff;
+}
+
+.admin-panel .keys .create-product-key-modal .help-message {
+    line-height: 18px;
+    font-size: 15px;
+    text-align: center;
+    color: #04BE00;
 }
 
 .admin-panel .keys .create-product-key-modal .field-wrap {
