--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4448,7 +4448,7 @@ fieldset {
         flex-basis: 51%;
     }
     .admin-panel .main .keys .products .product .cover {
-        width: 350px;
+        width: 330px;
     }
 }
 
@@ -4632,9 +4632,18 @@ fieldset {
 
 .admin-panel .product-keys .keys-wrap {
     display: flex;
-    margin-top: 30px;
     justify-content: space-between;
-    padding: 0 2vw;
+    padding: 30px 2vw 20px;
+}
+
+@media (max-width: 1500px) {
+    .admin-panel .product-keys .keys-wrap {
+        flex-direction: column;
+    }
+    .admin-panel .product-keys .keys-wrap .product {
+        width: 330px;
+        margin: 200px auto 0;
+    }
 }
 
 .admin-panel .product-keys .keys {
@@ -4642,11 +4651,38 @@ fieldset {
     font-size: 18px;
     line-height: 27px;
     color: #fff;
+    width: 100%;
 }
 
 .admin-panel .product-keys .keys .heading {
     display: flex;
     justify-content: space-between;
+}
+
+.admin-panel .product-keys .keys .heading div {
+    display: flex;
+    justify-content: center;
+}
+
+.admin-panel .product-keys .keys .heading .key-name {
+    width: 170px;
+}
+
+.admin-panel .product-keys .keys .heading .days-amount {
+    width: 165px;
+}
+
+.admin-panel .product-keys .keys .heading .activations {
+    width: 175px;
+}
+
+.admin-panel .product-keys .keys .heading .is-used {
+    width: 120px;
+}
+
+.admin-panel .product-keys .keys .heading .action {
+    width: 85px;
+    margin-right: 25px;
 }
 
 .admin-panel .product-keys .keys .keys-of-product {
@@ -4659,7 +4695,32 @@ fieldset {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-left: 10px;
+}
+
+.admin-panel .product-keys .keys .keys-of-product .key div {
+    display: flex;
+    justify-content: center;
+}
+
+.admin-panel .product-keys .keys .keys-of-product .key .name {
+    width: 150px;
+    word-break: break-all;
+    text-align: center;
+    padding-left: 20px;
+}
+
+.admin-panel .product-keys .keys .keys-of-product .days-amount {
+    width: 175px;
+    margin-left: 30px;
+}
+
+.admin-panel .product-keys .keys .keys-of-product .activations {
+    width: 175px;
+}
+
+.admin-panel .product-keys .keys .keys-of-product .is-used {
+    width: 120px;
+    padding-left: 30px;
 }
 
 .admin-panel .product-keys .keys .keys-of-product .key:nth-of-type(2n + 1) {
@@ -4690,7 +4751,7 @@ fieldset {
     justify-content: space-between;
     flex-direction: column;
     transition: 300ms;
-    width: 370px;
+    min-width: 370px;
     background-color: #1C1C24;
     height: 424px;
     border-radius: 10px;
@@ -4767,9 +4828,9 @@ fieldset {
     transition: 300ms;
     display: flex;
     justify-content: space-between;
-    width: 1170px;
+    max-width: 1170px;
     flex-wrap: wrap;
-    padding-top: 150px;
+    padding: 150px 0 0;
     margin: 40px auto 0;
 }
 
@@ -4790,6 +4851,12 @@ fieldset {
     border-radius: 10px;
 }
 
+@media (max-width: 1400px) {
+    .admin-panel .promocodes .promocodes-wrap {
+        padding: 150px 7vw 0 7vw;
+    }
+}
+
 .admin-panel .promocodes .promocodes-wrap .promocode .cover {
     width: 330px;
     height: 330px;
@@ -4808,6 +4875,11 @@ fieldset {
     letter-spacing: .1px;
     color: #FAFAFB;
     text-align: center;
+}
+
+.admin-panel .promocodes .promocodes-wrap .promocode .promocodes-amount {
+    display: flex;
+    flex-direction: column;
 }
 
 .admin-panel .promocodes .promocodes-wrap .promocode .buttons {
@@ -4840,8 +4912,556 @@ fieldset {
 
 .admin-panel .promocodes .promocodes-wrap .promocode .buttons .button.view-promocodes {
     background-color: #292932;
+    font-size: 11px;
 }
 
 .admin-panel .promocodes .promocodes-wrap .promocode .buttons .button.view-promocodes:hover {
     background-color: #1F1F26;
+}
+
+.admin-panel .promocodes .promocodes-wrap-products {
+    transition: 300ms;
+}
+
+.admin-panel .promocodes .create-promo-modal {
+    position: absolute;
+    top: 30px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    transition: 450ms;
+    display: flex;
+    justify-content: center;
+    z-index: 2;
+}
+
+.admin-panel .promocodes .create-promo-modal .create-promocode {
+    width: 420px;
+    padding: 10px 25px 20px;
+    background-color: #1C1C24;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+}
+
+.admin-panel .promocodes .create-promo-modal .create-promocode h3 {
+    text-align: center;
+}
+
+.admin-panel .promocodes .create-promo-modal .create-promocode .field-wrap {
+    display: flex;
+    flex-direction: column;
+}
+
+.admin-panel .promocodes .create-promo-modal .create-promocode .field-wrap label {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 36px;
+    letter-spacing: .1px;
+    text-align: center;
+}
+
+.admin-panel .promocodes .create-promo-modal .create-promocode .field-wrap input {
+    border-radius: 8px;
+    border: none;
+    color: #1C1C24;
+    padding: 7px 0 7px 10px;
+}
+
+.admin-panel .promocodes .create-promo-modal .create-promocode .save {
+    border: none;
+    background-color: #FF00006E;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 36px;
+    letter-spacing: .1px;
+    border-radius: 5px;
+    margin-top: 20px;
+    color: #fff;
+    cursor: pointer;
+    transition: 300ms;
+}
+
+.admin-panel .promocodes .create-promo-modal .create-promocode .save:hover {
+    background-color: #92191978;
+}
+
+.admin-panel .view-promocodes {
+    position: relative;
+}
+
+.admin-panel .view-promocodes .progress-bar {
+    top: 0;
+}
+
+.admin-panel .view-promocodes .view-promos-wrap {
+    transition: 300ms;
+    padding-top: 10px;
+}
+
+.admin-panel .view-promocodes .promocodes-wrap {
+    display: flex;
+    padding: 0 2vw;
+}
+
+.admin-panel .view-promocodes .view-promos-wrap h2 {
+    text-align: center;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 36px;
+    letter-spacing: .1px;
+}
+
+.admin-panel .view-promocodes .promocodes-wrap .table {
+    width: 100%;
+}
+
+.admin-panel .view-promocodes .product {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-width: 370px;
+    height: 424px;
+    border-radius: 10px;
+    background-color: #1C1C24;
+    padding: 170px 20px 20px;
+    position: relative;
+    margin-top: 170px;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 18px;
+}
+
+.admin-panel .view-promocodes .product .cover {
+    max-width: 330px;
+    width: 330px;
+    height: 330px;
+    border-radius: 10px;
+    border: 3px solid #44444F;
+    position: absolute;
+    top: -40%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
+
+.admin-panel .view-promocodes .product h3 {
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: .1px;
+    text-align: center;
+}
+
+.admin-panel .view-promocodes .product .promos-amount {
+    display: flex;
+    flex-direction: column;
+}
+
+.admin-panel .view-promocodes .product .buttons {
+    display: flex;
+    justify-content: center;
+}
+
+.admin-panel .view-promocodes .product .buttons .button {
+    padding: 10px 0;
+    font-size: 12px;
+    line-height: 18px;
+    font-weight: 600;
+    display: flex;
+    justify-content: center;
+    color: #FAFAFB;
+    text-decoration: none;
+    width: 160px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 300ms;
+}
+
+.admin-panel .view-promocodes .product .buttons .button.delete-promos {
+    background-color: #1E75FF;
+    font-size: 11px;
+}
+
+.admin-panel .view-promocodes .product .buttons .button.delete-promos:hover {
+    background-color: #1C6FF2;
+}
+
+.admin-panel .FAQ {
+    position: relative;
+    padding-top: 10px;
+}
+
+.admin-panel .FAQ .FAQ-wrap {
+    transition: 300ms;
+}
+
+.admin-panel .FAQ .FAQ-sorts-wrap {
+    transition: 300ms;
+}
+
+.admin-panel .FAQ h2 {
+    text-align: center;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 36px;
+    letter-spacing: .1px;
+}
+
+.admin-panel .FAQ .sorts-wrap {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    max-width: 1170px;
+}
+
+.admin-panel .FAQ .sorts-wrap .add-FAQ-sort {
+    padding: 0;
+    justify-content: center;
+    text-align: center;
+    padding: 0 24px;
+    min-height: 300px;
+    margin-left: 0;
+    background-color: #1C1C24;
+    height: 100%;
+    border: 1px solid #292932;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+    margin-top: 30px;
+    flex-basis: 20%;
+    min-width: 270px;
+}
+
+.admin-panel .FAQ .sorts-wrap .add-FAQ-sort .plus-wrap {
+    border-radius: 50%;
+    background-color: #FFC542;
+    padding: 30px;
+    cursor: pointer;
+    border: none;
+}
+
+.admin-panel .FAQ .sorts-wrap .add-FAQ-sort .plus {
+    width: 36px;
+    height: 36px;
+}
+
+.admin-panel .FAQ .sorts-wrap .add-FAQ-sort h3 {
+    margin-top: 30px;
+}
+
+.admin-panel .FAQ .sorts-wrap .add-FAQ-sort .add-new-sort {
+    margin-top: 5px;
+    font-family: Roboto, sans-serif;
+    font-size: 14px;
+    line-height: 22px;
+    color: #92929D;
+    letter-spacing: .1px;
+}
+
+.admin-panel .FAQ .sorts-wrap .answer {
+    flex-basis: 20%;
+    background-color: #1C1C24;
+    border: 1px solid #292932;
+    border-radius: 20px;
+    min-width: 270px;
+    padding-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    height: 100%;
+    min-height: 300px;
+    margin-top: 30px;
+    margin-left: 20px;
+}
+
+.admin-panel .FAQ .sorts-wrap .answer:nth-of-type(4n + 5) {
+    margin-left: 0;
+}
+
+.admin-panel .FAQ .sorts-wrap .answer h3 {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 27px;
+    color: #FAFAFB;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.admin-panel .FAQ .sorts-wrap .answer .decisions-amount {
+    line-height: 22px;
+    font-size: 14px;
+    font-family: Roboto, sans-serif;
+    color: #92929D;
+    letter-spacing: .1px;
+}
+
+.admin-panel .FAQ .sorts-wrap .answer .buttons {
+    display: flex;
+    justify-content: center;
+    margin-top: 85px;
+    user-select: none;
+}
+
+.admin-panel .FAQ .sorts-wrap .answer .buttons .button {
+    padding: 10px 0;
+    color: #FAFAFB;
+    font-size: 12px;
+    line-height: 18px;
+    font-weight: 600;
+    cursor: pointer;
+    width: 100px;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    border-radius: 10px;
+    transition: 300ms;
+}
+
+.admin-panel .FAQ .sorts-wrap .answer .buttons .button + .button {
+    margin-left: 10px;
+}
+
+.admin-panel .FAQ .sorts-wrap .answer .buttons .button.view {
+    background-color: #1E75FF;
+}
+
+.admin-panel .FAQ .sorts-wrap .answer .buttons .button.view:hover {
+    background-color: #1C6FF2;
+}
+
+.admin-panel .FAQ .sorts-wrap .answer .buttons .button.delete {
+    background-color: #FF00008F;
+}
+
+.admin-panel .FAQ .sorts-wrap .answer .buttons .button.delete:hover {
+    background-color: #92191978;
+}
+
+.admin-panel .FAQ .create-sort-modal {
+    transition: 300ms;
+    position: absolute;
+    top: 30px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    z-index: 1;
+}
+
+.admin-panel .FAQ .create-sort-modal .create-sort {
+    max-width: 420px;
+    width: 420px;
+    background-color: #1C1C24;
+    padding: 10px 25px 20px;
+    border-radius: 5px;
+}
+
+.admin-panel .FAQ .create-sort-modal .create-sort .field-wrap {
+    display: flex;
+    flex-direction: column;
+}
+
+.admin-panel .FAQ .create-sort-modal .create-sort .field-wrap label {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 36px;
+    letter-spacing: .1px;
+    text-align: center;
+}
+
+.admin-panel .FAQ .create-sort-modal .create-sort .field-wrap input {
+    color: #1C1C24;
+    margin-top: 5px;
+    border: none;
+    border-radius: 8px;
+    height: 30px;
+    padding-left: 10px;
+}
+
+.admin-panel .FAQ .create-sort-modal .create-sort .add {
+    margin-top: 20px;
+    border-radius: 5px;
+    background-color: #FF00006E;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 36px;
+    letter-spacing: .1px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    transition: 300ms;
+}
+
+.admin-panel .FAQ .create-sort-modal .create-sort .add:hover {
+    background-color: #92191978;
+}
+
+.admin-panel .FAQ .confirm-action {
+    position: absolute;
+    top: 30px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    transition: 300ms;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 420px;
+    background-color: #1C1C24;
+    padding: 20px;
+    z-index: 1;
+    border-radius: 10px;
+}
+
+.admin-panel .FAQ .confirm-action .heading {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.admin-panel .FAQ .confirm-action .heading .close-modal {
+    fill: #1E75FF;
+    cursor: pointer;
+}
+
+.admin-panel .FAQ .confirm-action .content {
+    text-align: center;
+    margin-top: 30px;
+}
+
+.admin-panel .FAQ .confirm-action .buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+    user-select: none;
+}
+
+.admin-panel .FAQ .confirm-action .buttons .button {
+    width: 160px;
+    border-radius: 10px;
+    padding: 10px 0;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+    user-select: none;
+    border: none;
+    color: #fff;
+    transition: 300ms;
+}
+
+.admin-panel .FAQ .confirm-action .buttons .button.agree {
+    background-color: #04BE00;
+}
+
+.admin-panel .FAQ .confirm-action .buttons .button.agree:hover {
+    opacity: .85;
+}
+
+.admin-panel .FAQ .confirm-action .buttons .button.refuse {
+    background-color: #FF00006E;
+}
+
+.admin-panel .FAQ .confirm-action .buttons .button.refuse:hover {
+    background-color: #92191978;
+}
+
+.admin-panel .view-answers {
+    position: relative;
+}
+
+.admin-panel .view-answers .answers-wrap {
+    transition: 300ms;
+    padding-top: 10px;
+}
+
+.admin-panel .view-answers .answers-wrap h2 {
+    text-align: center;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 36px;
+    letter-spacing: .1px;
+}
+
+.admin-panel .view-answers .view-answers-wrap {
+    display: flex;
+    justify-content: space-between;
+}
+
+.admin-panel .view-answers .view-answers-wrap .sort {
+    width: 270px;
+    min-height: 300px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: #1C1C24;
+    border: 1px solid #292932;
+    border-radius: 20px;
+    padding: 120px 0 10px;
+}
+
+.admin-panel .view-answers .view-answers-wrap .sort .sort-title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.admin-panel .view-answers .view-answers-wrap .sort h3 {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 27px;
+    text-align: center;
+}
+
+.admin-panel .view-answers .view-answers-wrap .sort .decisions-amount {
+    color: #92929D;
+    font-size: 14px;
+    line-height: 22px;
+    font-family: Roboto, sans-serif;
+    margin-top: 5px;
+    text-align: center;
+}
+
+.admin-panel .view-answers .view-answers-wrap .sort .buttons {
+    display: flex;
+    justify-content: center;
+}
+
+.admin-panel .view-answers .view-answers-wrap .sort .buttons .button {
+    border-radius: 10px;
+    border: none;
+    display: flex;
+    width: 100px;
+    font-size: 12px;
+    line-height: 18px;
+    font-weight: 600;
+    padding: 10px 0;
+    color: #FAFAFB;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    transition: 300ms;
+}
+
+.admin-panel .view-answers .view-answers-wrap .sort .buttons .button + .button {
+    margin-left: 10px;
+}
+
+.admin-panel .view-answers .view-answers-wrap .sort .buttons .button.add-answer {
+    background-color: #1E75FF;
+}
+
+.admin-panel .view-answers .view-answers-wrap .sort .buttons .button.add-answer:hover {
+    background-color: #1C6FF2;
 }
