--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2369,7 +2369,7 @@ fieldset {
     display: flex;
     background-color: #1C1C24;
     border-radius: 10px;
-    height: 177px;
+    height: 175px;
 }
 
 .dashboard .main .subscriptions .all-subscriptions .subscription .subscription-icon {
@@ -4657,6 +4657,7 @@ fieldset {
 .admin-panel .product-keys .keys .heading {
     display: flex;
     justify-content: space-between;
+    padding-bottom: 10px;
 }
 
 .admin-panel .product-keys .keys .heading div {
@@ -4669,7 +4670,7 @@ fieldset {
 }
 
 .admin-panel .product-keys .keys .heading .days-amount {
-    width: 165px;
+    width: 175px;
 }
 
 .admin-panel .product-keys .keys .heading .activations {
@@ -4681,8 +4682,7 @@ fieldset {
 }
 
 .admin-panel .product-keys .keys .heading .action {
-    width: 85px;
-    margin-right: 25px;
+    width: 140px;
 }
 
 .admin-panel .product-keys .keys .keys-of-product {
@@ -4703,15 +4703,13 @@ fieldset {
 }
 
 .admin-panel .product-keys .keys .keys-of-product .key .name {
-    width: 150px;
+    width: 170px;
     word-break: break-all;
     text-align: center;
-    padding-left: 20px;
 }
 
 .admin-panel .product-keys .keys .keys-of-product .days-amount {
     width: 175px;
-    margin-left: 30px;
 }
 
 .admin-panel .product-keys .keys .keys-of-product .activations {
@@ -4720,7 +4718,6 @@ fieldset {
 
 .admin-panel .product-keys .keys .keys-of-product .is-used {
     width: 120px;
-    padding-left: 30px;
 }
 
 .admin-panel .product-keys .keys .keys-of-product .key:nth-of-type(2n + 1) {
